fix: ルートパスが /users/:id/routes だが、:idパラメータを使用していないので/routes(GET) に変更
